test/Fail/Issue4586LetBindingAbsurd.err
Issue4586LetBindingAbsurd.agda:5.12-16: error: [NotAValidLetBinding.MissingRHS]
Missing right hand side in let binding
when scope checking let f () in Set
